--- a/sklep.html
+++ b/sklep.html
@@ -23,24 +23,11 @@
             <h2>Lista produktów</h2>
             <div class="products">
                 <div class="product">
-                    <h3>Produkt 1</h3>
-                    <p>Opis produktu 1</p>
+                    <img src="assets/G00nmaSklep.png" alt="Energetyczna guma do żucia">
+                    <h3>Energetyczna guma do żucia</h3>
+                    <p>Naturalny zastrzyk energii w wygodnej formie! Miętowy smak i praktyczne zastosowanie.</p>
                     <p>Cena: 100 PLN</p>
-                    <button onclick="dodajDoKoszyka('Produkt 1', 100)">Zamów teraz</button>
-                </div>
-
-                <div class="product">
-                    <h3>Produkt 2</h3>
-                    <p>Opis produktu 2</p>
-                    <p>Cena: 150 PLN</p>
-                    <button onclick="dodajDoKoszyka('Produkt 2', 150)">Zamów teraz</button>
-                </div>
-
-                <div class="product">
-                    <h3>Produkt 3</h3>
-                    <p>Opis produktu 3</p>
-                    <p>Cena: 200 PLN</p>
-                    <button onclick="dodajDoKoszyka('Produkt 3', 200)">Zamów teraz</button>
+                    <button onclick="dodajDoKoszyka('Energetyczna guma do żucia', 100)">Zamów teraz</button>
                 </div>
             </div>
 
